[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/spritesheets/Fx/shot.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]
[ext_resource path="res://sprites/spritesheets/Fx/impact.png" type="Texture" id=3]
[ext_resource path="res://sprites/spritesheets/Fx/impact-shadow.png" type="Texture" id=4]
[ext_resource path="res://sprites/spritesheets/Fx/shot-shadow.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 6, 4 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 6, 0, 6, 4 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 6, 4 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6, 0, 6, 4 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "hit",
"speed": 15.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "hit_shadow",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default_shadow",
"speed": 5.0
} ]

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
playing = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="setup" from="." to="." method="_on_Bullet_setup"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
